--- a/css/index.css
+++ b/css/index.css
@@ -64,19 +64,19 @@ main {
 	padding: 30px;
 }
 
-#service {
+#experience {
 	border-top-style: solid;
 	line-height: 1.5;
 	padding: 30px;
 }
 
-#portfolio {
+#locations {
 	border-top-style: solid;
 	line-height: 1.5;
 	padding: 30px;
 }
 
-#feedback {
+#background {
 	border-top-style: solid;
 	line-height: 1.5;
 	padding: 30px;
