--- a/css/index.css
+++ b/css/index.css
@@ -1,83 +1,134 @@
-* {
-	margin: 0;
-	padding: 0;
-}
-
-html,
-body {
-	width: 100%;
-	height: 100%;
-}
-
-body {
-	background: #AED6F1
-}
-
 header {
-	height: 70px;
-	margin: 1px 1px 1px 1px;
-	padding: 20px 1px 1px 1px;
-}
-
-
-#logo a {
-	margin-left: 20px;
-	float: left;
-	font-weight: bold;
-	text-decoration: none;
-	font-size: 26px;
-	text-shadow: 0 1px 0 white;
-	color: #373e47;
-}
-
-nav {
-	overflow: hidden;
-	float: right;
-}
-
-nav li {
-	float: left;
-	list-style: none;
-}
-
-nav li a {
-	font-size: 20px;
-	font-weight: bold;
-	text-decoration: none;
-	padding: 0 30px;
-	color: #143567;
-	text-shadow: 0 1px 0 white;
-}
-
-nav li a:hover {
-	color: #a45f93;
-}
-
-main {
 	text-align: center;
+	color: white;
+	font-size: 1.5em;
+	font-family: arial;
+	top: 0;
+	width: 100%;
 }
 
-#home {
-	font-size: 30px;
-	height: 350px;
-	margin: 1px 1px 1px 1px;
-	padding: 30px;
+body {
+	text-align: center;
+	color: black;
+	font-size: 1.5em;
+	font-family: arial;
+	background: silver;
+}
+
+
+h1 {
+	font-family: Aldrich;
+	font-size: 2.2em;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 700;
+	line-height: 1.1em;
+	color: white;
+}
+
+h2 {
+	font-family: Aldrich;
+	font-size: 1em;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 700;
+	line-height: 0.5em;
+	color: white;
+}
+
+h3 {
+	font-family: Aldrich;
+	font-size: 1.8em;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 700;
+	line-height: 0.9em;
+	color: black;
+}
+
+.navbar {
+	overflow: visible;
+	background-color: #333;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	text-align:center;
+}
+
+.navbar a {
+	display: inline;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 0px 15px;
+	text-decoration: none;
+	font-size: 1em;
+	font-family: arial;
+}
+
+.navbar a:hover {
+	background: #ddd;
+	color: black;
+}
+
+
+.checked {
+	color: blue;
+}
+
+#main {
+    margin-top: 100px; 
+}
+
+#brief {
+	background-color: white;
+	text-align: center;
+	color: black;
+	font-size: 1em;
+	font-family: arial;
+	padding: 15px 15px;
 }
 
 #experience {
-	border-top-style: solid;
-	line-height: 1.5;
-	padding: 30px;
+	background-color: white;
+	text-align: center;
+	color: black;
+	font-size: 1em;
+	font-family: arial;
+	padding: 15px 15px;
 }
 
 #locations {
-	border-top-style: solid;
-	line-height: 1.5;
-	padding: 30px;
+	background-color: white;
+	text-align: center;
+	color: black;
+	font-size: 1em;
+	font-family: arial;
+	padding: 15px 15px;
 }
 
-#background {
-	border-top-style: solid;
-	line-height: 1.5;
-	padding: 30px;
+#study {
+	background-color: white;
+	text-align: center;
+	color: black;
+	font-size: 1em;
+	font-family: arial;
+	padding: 15px 15px;
+}
+
+#skills {
+	background-color: white;
+	text-align: center;
+	color: black;
+	font-size: 1em;
+	font-family: arial;
+	padding: 15px 15px;
+}
+
+#contact {
+	background-color: white;
+	text-align: center;
+	color: black;
+	font-size: 1em;
+	font-family: arial;
+	padding: 15px 15px;
 }
